--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Sightseeing App</string>
     <string name="facebook_app_id">1031583523556756</string>
+    <string name="fb_login_protocol_scheme">fb1031583523556756</string>
 </resources>
