--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="facebook_app_id">1031583523556756</string>
     <string name="fb_login_protocol_scheme">fb1031583523556756</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_create_trip">CreateTripActivity</string>
 </resources>
