--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="fb_login_protocol_scheme">fb1031583523556756</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_create_trip">CreateTripActivity</string>
+    <string name="welcome_message">Welcome to Sightseeing app</string>
+    <string name="login_message">Continue with Facebook</string>
+
 </resources>
