New drawable vectors and layout changes in Trip element

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="nav_favorites">Favorites</string>
     <string name="nav_new_trip">Create trip</string>
     <string name="nav_home">Home</string>
+    <string name="action_favorite">Favorite</string>
 
 </resources>
