--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="search_hint">Where are you going?</string>
     <string name="search_filter">Filter</string>
+    <string name="search_results">Search Results</string>
 </resources>
