inital setup of page slider tabs within create activity :+1:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="search_hint">Where are you going?</string>
     <string name="search_filter">Filter</string>
     <string name="search_results">Search Results</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
